UPD RESTController, now its using Java 11 http